<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zws.team_project.WeiguiActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </RelativeLayout>
    <TextView
        android:id="@+id/WeiGuiYuanYin"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:text="xxx"
        android:textSize="18sp"
        android:visibility="visible"
        android:layout_marginLeft="40dp"

        android:layout_marginTop="5dp"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/WeiGuiTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/WeiGuiTime"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="136dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="128dp" />

    <TextView
        android:id="@+id/FengYinTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FengYinTime"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="224dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="224dp" />
    <TextView
        android:id="@+id/CaoZuo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CaoZuo"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="240dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="320dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="#9D9D9D"
        android:visibility="visible"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar4"
        android:layout_marginTop="105dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />


</android.support.constraint.ConstraintLayout>
